# rtimv

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  agent_context.md  imviewer.pro  librtimv.pro  readme.md  rtimv.pro  rtimvServer.pro  todo.txt
.github/workflows/: install.yml
Doc/: imv_control_panel2.eps  imv_control_panel3.eps  imv_stats_box.eps  user_guide.txt
agents/plans/: jpeg_quality_config_plan.md  logging_prefix_plan.md  overlay-dynamic-updates.md  plugin_help.md  quality_shortcuts_userguide_plan.md  transport_stats_summary.md
cbwork/: boneTerp  boneTerp.cpp  jetTerp.cpp
doc/: Installation.md  PluginGuide.md  UserGuide.md  imv_control_panel1.eps  imv_mainwindow.eps  rtimv-dox.in  rtimv.dox  rtimvServer-protocol.md  user_guide.txt
doc/figures-work/: cubeMode.odp
forms/: cubeCtrl.ui  imviewerControlPanel.ui  imviewerStats.ui  imviewergui.ui  rtimvMainWindow.ui  rtplot.ui
res/: imviewer.qrc
scripts/: rtimv_provision_ubuntu2204.sh  rtimv_provision_ubuntu2404.sh
src/: ImageStruct.hpp  StretchBox.cpp  StretchBox.hpp  StretchCircle.cpp  StretchCircle.h  StretchCircle.hpp  StretchGraphicsItem.hpp  StretchLine.cpp  StretchLine.hpp  circleTimeSeries.hpp  colorMaps.hpp  cubeCtrl.cpp  cubeCtrl.hpp  graphicsview.cpp  graphicsview.hpp  imviewer.cpp  imviewer.hpp  imviewerControlPanel.cpp  imviewerControlPanel.h  imviewer_main.cpp  imviewerform.cpp  imviewerform.h  imviewerform.hpp  imviewerstats.cpp  imviewerstats.hpp  pixaccess.h  rtPlotForm.cpp  rtPlotForm.hpp  rtimvBase.cpp  rtimvBase.hpp  rtimvBaseObject.cpp  rtimvControlPanel.cpp  rtimvControlPanel.hpp  rtimvGraphicsView.cpp  rtimvGraphicsView.hpp  rtimvImage.cpp  rtimvImage.hpp  rtimvInterfaces.hpp  rtimvMain.cpp  rtimvMainWindow.cpp  (+10 more)
src/common/: colorMaps.hpp  rtimvBase.cpp  rtimvBase.hpp  rtimvBaseObject.cpp  rtimvBaseObject.hpp  rtimvColor.hpp  rtimvFilters.cpp  rtimvFilters.hpp  rtimvImage.hpp  rtimvLog.hpp
src/common/images/: ImageStruct.hpp  fitsDirectory.cpp  fitsDirectory.hpp  fitsImage.cpp  fitsImage.hpp  mzmqImage.cpp  mzmqImage.hpp  shmimImage.cpp  shmimImage.hpp
src/gui/: cubeCtrl.cpp  cubeCtrl.hpp  cubeCtrl.ui  rtimvControlPanel.cpp  rtimvControlPanel.hpp  rtimvControlPanel.ui  rtimvMainWindow.cpp  rtimvMainWindow.hpp  rtimvMainWindow.ui  rtimvStats.cpp  rtimvStats.hpp  rtimvStats.ui
src/images/: ImageStruct.hpp  fitsDirectory.cpp  fitsDirectory.hpp  fitsImage.cpp  fitsImage.hpp  mzmqImage.cpp  mzmqImage.hpp  pixaccess.hpp  shmimImage.cpp  shmimImage.hpp
src/librtimv/: StretchBox.cpp  StretchBox.hpp  StretchGraphicsItem.hpp  StretchLine.cpp  StretchLine.hpp  rtimvGraphicsView.cpp  rtimvGraphicsView.hpp  rtimvInterfaces.hpp
src/proto/: build.sh  doprotoc.bash  install.md  out.txt  rtimv.grpc.pb.cc  rtimv.grpc.pb.h  rtimv.pb.cc  rtimv.pb.h  rtimv.proto  rtimvGRPCClient  rtimvGRPCClient.cpp  rtimvGRPCServer  rtimvGRPCServer.cpp
src/rtimv/: rtimvMain.cpp
src/server/: rtimvClientBase.cpp  rtimvClientBase.hpp  rtimvClientMain.cpp  rtimvColorGRPC.hpp  rtimvFilterGRPC.hpp  rtimvServer.cpp  rtimvServer.hpp  rtimvServerMain.cpp  rtimvServerThread.cpp  rtimvServerThread.hpp
systemd/: rtimvServer.service.in
tests/: CMakeLists.txt
tests/client/: rtimvClientBase_async_race_test.cpp
